Update clusdur button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="links">
             <a href="mailto:jan@j45.dev">Email Me</a>
             <a href="https://github.com/janscheres" target="_blank">GitHub</a>
-            <a href="clusdur/">ClusDur Hub</a>
+            <a href="clusdur/">ClusDur</a>
         </div>
     </div>
 
