Add JSC stuff to projects

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
             <h2 style="font-size: 2rem; color: var(--heading-color); margin-top: 4rem; margin-bottom: 2rem;">Projects</h2>
             <div class="project-list">
                 <div class="project-item">
+                    <h3><a href="#" target="_blank">Neural Operators for Particle Simulations</a></h3>
+                    <p>Research conducted at Jülich Supercomputing Centre exploring the effectiveness of a foundational model approach to particle-based numerical methods by evaluating transfer learning and other behaviors with a Fourier Neural Operator on Vlasov-Poisson systems.</p>
+                </div>
+                <div class="project-item">
                     <h3><a href="https://github.com/janscheres/sde_playground" target="_blank">Stochastic Differential Equations Playground</a></h3>
                     <p>An interactive notebook to explore the reversal of Stochastic Differential Equations using a trained neural network, visualizing data diffusion and reconstruction.</p>
                 </div>
