--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
     <canvas id="particle-canvas"></canvas>
 
     <div class="content-wrapper">
-        <h1>Jan</h1>
+        <h1>Jan Scheres Monesma</h1>
         <p>Mathematics undergraduate at Durham, interested in HPC and computational maths. <br>Previously a guest student at the Jülich Supercomputing Centre, working on FNO models for plasma simulations.</p>
         <div class="links">
             <a href="mailto:jan@j45.dev">Email Me</a>
+            <a href="https://www.linkedin.com/in/janscheres" target="_blank">LinkedIn</a>
             <a href="https://github.com/janscheres" target="_blank">GitHub</a>
             <a href="clusdur/">ClusDur</a>
         </div>
